<resources>
    <string name="app_name">Monopoly</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="monopoly">MONOPOLY</string>
    <string name="history">HISTORY</string>
    <string name="new_game">NEW GAME</string>
    <string name="settings">SETTINGS</string>
    <string name="plus">+</string>
    <string name="slider_desc">Select number of players</string>
    <string name="slider_desc2">Select shaking sensitivity</string>
    <string name="select_number_of_players">Select Number Of Players</string>
    <string name="player_1">Player #1</string>
    <string name="player_2">Player #2</string>
    <string name="player_3">Player #3</string>
    <string name="player_4">Player #4</string>
    <string name="start">START</string>
    <string name="date">Date:</string>
    <string name="duration">Duration:</string>
    <string name="game">Game</string>
    <string name="players">Players:</string>
    <string name="simulation">SIMULATION</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="vibrate_while_shaking">Vibrate While Shaking</string>
    <string name="monopoly_logo">Monopoly logo</string>
    <string name="erase_all_game_data">ERASE ALL GAME DATA</string>
</resources>